# arca

./: .gitignore  ARCA_Full_Codebase_20260419_0837.md  MANIFEST.in  README.md  apply_fixes.sh  arca_full_context.md  arca_full_context_v3.md  audit.md  codebase.sh  context.txt  generate_context.sh  my_home_network.yaml  my_office.yaml  pyproject.toml  pytest.ini  quickstart_v3.py  refresh_codebase_context.sh  setup.py  setup_v3.sh  test_comprehensive.py  test_run.py
arca/: __init__.py  cli.py
arca/agents/: __init__.py  langgraph_orchestrator.py
arca/api/: __init__.py  server.py
arca/cli/: __init__.py  main.py
arca/core/: __init__.py  agent.py  cleanrl_ppo.py  config.py  gnn_policy.py  trainer.py
arca/cpp_ext/: __init__.py  sim_engine.cpp
arca/graph/: workflow.py
arca/llm/: local_llm.py  providers.py
arca/memory/: __init__.py  episode_buffer.py  vector_memory.py
arca/reporting/: __init__.py  report_generator.py
arca/sim/: __init__.py  action.py  custom_network.py  environment.py  host.py  network_generator.py
arca/targets/: connectors.py
arca/training/: __init__.py  curriculum.py  offline_rl.py  self_play.py
arca/utils/: __init__.py
arca/viz/: __init__.py  visualizer.py
examples/: quickstart.py  test_my_network.py
tests/: conftest.py  test_arca.py  test_comprehensive.py
