[project]
name = "arca-agent"
version = "0.3.0"                                      # ← Changed
description = "ARCA — Recursive GNN+RL Autonomous Cyber Agent with Local LLM reflection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}                               # ← Fixed (was table)
authors = [{name = "Dipayan Dasgupta", email = "deep.dasgupta2006@gmail.com"}]
keywords = [
    "reinforcement-learning", "cybersecurity", "pentesting",
    "langgraph", "agentic-ai", "graph-neural-network", "pybind11",
    "autonomous-agent", "local-llm"
]

# Add this line to silence the classifiers warning
dynamic = ["classifiers"]

# ── Core dependencies (CPU-safe, always installed) ───────────────────────────
dependencies = [
    "numpy>=1.26",
    "gymnasium>=1.0",
    "networkx>=3.3",
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "llama-cpp-python>=0.3.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain>=0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "tensorboard>=2.17",
    "httpx>=0.27",
    "ollama>=0.2",
]

[project.urls]
Homepage   = "https://github.com/DipayanDasgupta/arca"
Repository = "https://github.com/DipayanDasgupta/arca"

[project.optional-dependencies]
gpu = ["stable-baselines3>=2.3"]
sb3 = ["stable-baselines3>=2.3"]
cpp = ["pybind11>=2.11"]
dev = ["pytest", "pytest-cov", "black", "ruff", "mypy"]
all = [
    "stable-baselines3>=2.3",
    "pybind11>=2.11",
    "dash>=2.16",
    "groq>=0.5",
]

[project.scripts]
arca = "arca.cli.main:main"

[build-system]
requires      = ["setuptools>=68", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["arca*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"arca" = ["*.cpp", "cpp_ext/*.cpp"]
"arca.cpp_ext" = ["*.cpp"]

[tool.setuptools]
include-package-data = true
zip-safe             = false